# fp-convert

./: .gitignore  FPConvertTest.mm  README.md  fp-convert.ipynb  fp-convert.py  fp-convert.yml  localinstall.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: User_Guide.md  colors.html
docs/examples/: Template_Repository.mm
docs/examples/blooper-specs/: Blooper_Specifications.mm  Blooper_Specifications.tex  fp-convert.yml
docs/examples/cdc-planner/: CDC_Planner.mm  CDC_Planner.tex
fp_convert/: __init__.py  __main__.py  colors.py  config.py  errors.py
fp_convert/docs/: __init__.py
fp_convert/resources/: Template_Repository.mm
fp_convert/templates/: psdoc.py
fp_convert/utils/: builders.py  dbs.py  decorators.py  fileproc.py  helpers.py  softdev.py
fp_convert/utils/uml/: helpers.py  plantuml.py
tests/: context.py  test_helpers.py
