[metadata]
name = fp-convert
version = 0.1.0
author = K Raghu Prasad
author_email = raghuprasad@duck.com
description = Convert Freeplane mindmaps to print-quality PDF documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kraghuprasad/fp-convert
license = Apache-2.0
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    freeplane-io
    pylatex
    pathlib
    cairosvg

[options.packages.find]
exclude = 
    tests*

[options.package_data]
fp_convert = resources/*

[build_sphinx]
project = fp-convert
version = 0.1.0
release = 0.1.0
source-dir = docs
build-dir = docs/_build
builder = html

[options.extras_require]
docs = 
    sphinx
    sphinx_rtd_theme
    recommonmark
dev = 
    pytest
    sphinx

[options.entry_points]
console_scripts = 
    fp-convert = fp_convert.__main__:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
